fix: address CodeRabbit review round 5
Actionable fixes:
- JsonFieldReader: catch NumberFormatException for NaN/Infinity in
  toExactInt/toExactLong (BigDecimal throws on special float values)
- JsonFieldReader.readStringSet: handle duplicate elements with
  LinkedHashSet instead of Set.copyOf (which throws on duplicates)
- PostTuiActionExecutor: null guard for exitPlan.action()
- PostGenerationMenuState: quote paths with spaces in successHint()

Nitpick fixes:
- ApiPayloadParser.toInteger: use BigDecimal.intValueExact() for
  consistency with JsonFieldReader; remove dead isWholeNumber()
- QuarkusForgeCli: chain original TimeoutException as cause in
  catalog/preset timeout handlers (2 sites)

Deliberately not applied:
- CatalogRowBuilder.putIfAbsent: breaks navigation behavior
  (recents are prepended, category row index is the canonical
  position needed by hierarchy left/pageUp navigation)